[package]
name = "testeq-rs"
description = "Provides support for various types of connected test equipment"
version = "0.1.1"
license = "MIT"
edition = "2024"

[dependencies]
async-trait = "0.1"
log = { version = "0.4", features = [ "kv" ] }
futures = "0.3.31"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.49", features = [ "net", "io-util", "sync", "macros", "rt-multi-thread", "time" ] }
tokio-serial = { version = "5.4", features = [] }

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "eq-test"

[[example]]
name = "proto-test"
